finishing the accordion

--- a/01-accordion.html
+++ b/01-accordion.html
@@ -40,10 +40,73 @@
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim
               pariatur
             </li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+            <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="item open">
+        <p class="number">02</p>
+        <p class="text">How long do I have to return my Chair?</p>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="icon"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="m19.5 8.25-7.5 7.5-7.5-7.5"
+          />
+        </svg>
+        <div class="hidden-box">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+            adipisci quia similique aliquid eaque aperiam eveniet expedita.
+          </p>
+          <ul>
+            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
             <li>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem,
-              fugiat perspiciatis.
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim
+              pariatur
             </li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+            <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="item">
+        <p class="number">02</p>
+        <p class="text">How long do I have to return my Chair?</p>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="icon"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="m19.5 8.25-7.5 7.5-7.5-7.5"
+          />
+        </svg>
+        <div class="hidden-box">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+            adipisci quia similique aliquid eaque aperiam eveniet expedita.
+          </p>
+          <ul>
+            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
+            <li>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim
+              pariatur
+            </li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
             <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
           </ul>
         </div>
