--- a/02-carousel.html
+++ b/02-carousel.html
@@ -17,13 +17,12 @@
         <p class="testimonial-text">
           "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
           modi sit dolor dignissimos tenetur aliquid facilis sint minus,
-          cupiditate a nostrum laborum, exercitationem unde obcaecati aperiam
-          molestiae possimus eum. Delectus"
+          cupiditate a nostrum laborum."
         </p>
         <p class="testimonial-author">Maria de Almeida</p>
         <p class="testimonial-job">Senior Product Manager at EDP Commericial</p>
       </blockquote>
-      <button class="btn">
+      <button class="btn btn--left">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
@@ -39,7 +38,7 @@
           />
         </svg>
       </button>
-      <button class="btn">
+      <button class="btn btn--right">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
@@ -55,6 +54,12 @@
           />
         </svg>
       </button>
+      <div class="dots">
+        <div class="dot dot--fill"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+      </div>
     </div>
   </body>
 </html>
