--- a/03-table.html
+++ b/03-table.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="carousel-styles.css" />
+    <link rel="stylesheet" href="table-styles.css" />
     <title>Table</title>
   </head>
   <body>
@@ -26,6 +26,12 @@
           <td>80 cm</td>
           <td>60 cm</td>
           <td>220 cm</td>
+        </tr>
+        <tr>
+          <th>Height</th>
+          <td>100 cm</td>
+          <td>110 cm</td>
+          <td>90 cm</td>
         </tr>
         <tr>
           <th>Dept</th>
